# django-criterion

./: LICENSE  README.md  setup.cfg
django_criterion/: __init__.py  apps.py
django_criterion/core/: __init__.py  queries.py  result_type.py  timing.py
django_criterion/management/commands/: criterion.py
